# pyclipper

./: .appveyor.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  config.sh  pyproject.toml  runtests.py  setup.cfg  setup.py
.github/workflows/: ci.yml
pyclipper/: pyclipper.pyx  test_pyclipper.py
src/pyclipper/: _pyclipper.pyx
tests/: test_pyclipper.py
